fixed z-index

--- a/client/src/components/header/header.css
+++ b/client/src/components/header/header.css
@@ -30,15 +30,16 @@
   position: fixed;
   left: 0;
   margin: 0 0% 0% 1.5%;
-  padding: 15% 0%;
+  padding: 20% 0%;
   top: 0;
   float: left;
   overflow-x: hidden;
+  z-index: -1;
 }
 .leftBarImg {
   padding: 0;
   margin: 0;
-  width: 40%;
+  width: 30%;
   height: 100%;
 }
 
@@ -46,15 +47,16 @@
   position: fixed;
   right: 0;
   margin: 0 1.5% 0% 0%;
-  padding: 15% 0%;
+  padding: 20% 0%;
   top: 0;
   overflow-x: hidden;
   float: left;
+  z-index: -1;
 }
 .rightBarImg {
   padding: 0;
   margin: 0;
-  width: 40%;
+  width: 30%;
   float: right;
   height: 100%;
 }
@@ -72,18 +74,20 @@
     position: fixed;
     left: 0;
     margin: 0 0% 0% 1.5%;
-    width: 20%;
-    padding: 40% 0%;
+    width: 15%;
+    padding: 45% 0%;
     top: 0;
     overflow-x: hidden;
+    z-index: -1;
   }
   .rightBar {
     position: fixed;
     right: 0;
-    width: 20%;
+    width: 15%;
     margin: 0 1.5% 0% 0%;
-    padding: 40% 0%;
+    padding: 45% 0%;
     top: 0;
+    z-index: -1;
     overflow-x: hidden;
   }
 }
